--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -4,3 +4,4 @@ DB_USER=your_user
 DB_PASS=your_password
 DB_NAME=your_name
 SERVER_PORT=server_port
+CORS_ALLOWED_ORIGINS=your_frontend_url,your_backend_url
