--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.1",
+    "graphql": "^16.8.1",
     "husky": "^9.0.11",
     "next": "14.2.3",
     "prettier": "^3.2.5",
