test integration getUser

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,3 +5,4 @@ DB_PASS=your_password
 DB_NAME=your_name
 SERVER_PORT=server_port
 CORS_ALLOWED_ORIGINS=your_frontend_url,your_backend_url
+NODE_ENV=developement
