--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "ts-node-dev ./src/index.ts",
-    "resetDB": "ts-node-dev src/resetDb.ts"
+    "resetDB": "ts-node-dev src/resetDb.ts",
+    "testDB:wait": "docker compose -f docker-compose.integration-tests.yml up testDB --wait"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +35,10 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/nodemailer": "^6.4.14"
+    "@types/nodemailer": "^6.4.14",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "graphql-tag": "^2.12.6"
   }
 }
