--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "husky": "^9.0.11",
     "next": "14.2.3",
