added backend modifications for front hot reload

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -5,3 +5,7 @@ DB_PASS=your_password
 DB_NAME=your_name
 SERVER_PORT=server_port
 CORS_ALLOWED_ORIGINS=your_frontend_url,your_backend_url
+
+WDS_SOCKET_HOST=127.0.0.1
+CHOKIDAR_USEPOLLING=true
+WATCHPACK_POLLING=true
