--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "husky": "^9.0.11",
+    "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
