--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,4 +12,10 @@ COPY tsconfig.json ./tsconfig.json
 COPY *.config.mjs ./
 COPY *.config.ts ./
 
+ARG NEXT_PUBLIC_GRAPHQL_API_URL
+ENV NEXT_PUBLIC_GRAPHQL_API_URL ${NEXT_PUBLIC_GRAPHQL_API_URL}
+
+ARG NEXT_PUBLIC_UPLOAD_API_ENDPOINT
+ENV NEXT_PUBLIC_UPLOAD_API_ENDPOINT ${NEXT_PUBLIC_UPLOAD_API_ENDPOINT}
+
 CMD npm run dev
