--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/amatic-sc": "^5.0.20",
+    "@fontsource/open-sans": "^5.0.28",
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "husky": "^9.0.11",
