--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       # https://github.com/satackey/action-docker-layer-caching
-      - uses: satackey/action-docker-layer-caching@v0.0.11
-        # Ignore the failure of a step and avoid terminating the job.
-        continue-on-error: true
+      # - uses: satackey/action-docker-layer-caching@v0.0.11
+      #   # Ignore the failure of a step and avoid terminating the job.
+      #   continue-on-error: true
       - uses: actions/setup-node@v4
         with:
           node-version: 20
