--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.0",
+    "@graphql-tools/schema": "^10.0.4",
     "argon2": "^0.40.1",
     "class-validator": "^0.14.0",
     "cookie": "^0.6.0",
@@ -21,6 +22,7 @@
     "express": "^4.18.3",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
@@ -28,17 +30,19 @@
     "ts-dotenv": "^0.9.1",
     "ts-node-dev": "^2.0.0",
     "type-graphql": "^2.0.0-beta.3",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "ws": "^8.17.1"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.14",
-    "@types/jest": "^29.5.12",
+    "@types/ws": "^8.5.10",
+    "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.2",
-    "graphql-tag": "^2.12.6"
+    "ts-jest": "^29.1.2"
   }
 }
