--- a/frontend/Dockerfile.production
+++ b/frontend/Dockerfile.production
@@ -18,4 +18,6 @@ ENV NEXT_PUBLIC_GRAPHQL_API_URL ${NEXT_PUBLIC_GRAPHQL_API_URL}
 ARG NEXT_PUBLIC_UPLOAD_API_ENDPOINT
 ENV NEXT_PUBLIC_UPLOAD_API_ENDPOINT ${NEXT_PUBLIC_UPLOAD_API_ENDPOINT}
 
-CMD npm run dev
+RUN npm run build
+
+CMD npm start
