updated uri in the client file

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 WDS_SOCKET_HOST=127.0.0.1
 CHOKIDAR_USEPOLLING=true
 WATCHPACK_POLLING=true
-DB_HOST=db
+NEXT_PUBLIC_GRAPHQL_API_URL=http://localhost:4001
