--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -26,18 +26,14 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    build:
-      context: backend
-      dockerfile: Dockerfile.production
+    image: jasminegrz/gifty-back
 
   frontend:
     environment:
       JWT_PRIVATE_KEY: ${JWT_PRIVATE_KEY:-changeme}
     stop_grace_period: 0s
     env_file: frontend/.env
-    build:
-      context: frontend
-      dockerfile: Dockerfile.production
+    image: jasminegrz/gifty-front
 
   gateway:
     restart: always
