--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -2,24 +2,24 @@ name: Test, compile and push client and server to production
 
 on:
   push:
-    branches: ["main"]
+    branches: ["dev"]
   workflow_dispatch:
 
 jobs:
   client-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/tests-front.yml@main
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/tests-front.yml@dev
 
   e2e-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/e2e-tests.yml@main
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/e2e-tests.yml@dev
 
   integration-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/integration-tests.yml@main
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/integration-tests.yml@dev
 
   build-and-push-server:
     needs:
       - integration-tests
       - e2e-tests
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-backend.yml@main
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-backend.yml@dev
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -30,7 +30,7 @@ jobs:
     needs:
       - client-tests
       - e2e-tests
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-frontend.yml@main
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-frontend.yml@dev
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
