--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -2,40 +2,40 @@ name: Test, compile and push client and server to production
 
 on:
   push:
-    branches: ["dev"]
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
   client-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/tests-front.yml@dev
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/tests-front.yml@main
 
   e2e-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/e2e-tests.yml@dev
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/e2e-tests.yml@main
 
   integration-tests:
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/integration-tests.yml@dev
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/integration-tests.yml@main
 
   build-and-push-server:
     needs:
       - integration-tests
       - e2e-tests
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-backend.yml@dev
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-backend.yml@main
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     with:
-      image_name: jasminegrz/gifty-back
+      image_name: docky1921/Gifty-back
 
   build-and-push-client:
     needs:
       - client-tests
       - e2e-tests
-    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-frontend.yml@dev
+    uses: WildCodeSchool/2023-11-wns-bleu-g2/.github/workflows/build-frontend.yml@main
     secrets:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     with:
-      image_name: jasminegrz/gifty-front
+      image_name: docky1921/Gifty-front
 
   notify-vps:
     needs:
