graphql subscription working on backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.3",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.22.4",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.13",
