--- a/e2e-tests/.env.example
+++ b/e2e-tests/.env.example
@@ -10,8 +10,8 @@ DB_NAME=postgres
 DB_PORT=5432
 BASE_URL=http://localhost:3000
 SMTP_HOST=in-v3.mailjet.com
-SMTP_PORT=465
-SMTP_USER=95b8fc1eb0b19737c6eae68409c31952
-SMTP_PASS=api-key
+SMTP_PORT=587
+SMTP_USER=b3dc0ca6fb2e69092683b4e10346e67b
+SMTP_PASSWORD=api-key
 EMAIL_FROM=contact@app.com
 FRONTEND_URL=http://localhost:3000
