--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "framer-motion": "^11.1.7",
     "graphql": "^16.8.1",
     "husky": "^9.0.11",
+    "i18next": "^23.14.0",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
     "prettier": "^3.2.5",
     "prop-types": "^15.8.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-i18next": "^15.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
