--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@types/nodemailer": "^6.4.15",
     "graphql-tag": "^2.12.6",
     "jest": "^29.7.0",
+    "nodemailer-mock": "^2.0.6",
     "ts-jest": "^29.1.2"
   }
 }
