--- a/.env.production.example
+++ b/.env.production.example
@@ -4,5 +4,9 @@ JWT_PRIVATE_KEY=zefo!hzeiufhizue3Ehfiuzehfiuzeuhfiuzehf
 NODE_ENV="production"
 GATEWAY_PORT=8000
 CORS_ALLOWED_ORIGINS=http://localhost:8000
-EMAIL_FROM=user@app.com
+SMTP_HOST=in-v3.mailjet.com
+SMTP_PORT=587
+SMTP_USER=b3dc0ca6fb2e69092683b4e10346e67b
+SMTP_PASSWORD=069d127cbe2bd9005b3c6d9ad42475dd
+EMAIL_FROM=jasmine-grozinger_student2023@wilder.school
 FRONTEND_URL=http://localhost:8000
