--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -9,6 +9,14 @@ http {
             proxy_pass http://backend:4001;
         }
 
+        location /subscriptions {
+            proxy_pass http://backend:4001/subscriptions;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade "websocket";
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+        }
+
         location / {
             proxy_pass http://frontend:3000;
         }
